# ICT_Intro_to_Programming

./: FileMove.py  Q5-2.py  Week3.ipynb  test.py  test2.py  week3_Q5.py  week4_Q1.py  week_5.py
files/: text1.txt  text2.txt  text3.txt
pig_latin_generator/: open_file.py  pig_latin.py  pig_latin_pseudocode.vb  piggenator.py  pyproject.toml  test.py
pig_latin_generator/controller/: __init__.py  main_controller.py
pig_latin_generator/text_files/: demo.txt
pig_latin_generator/utils/: __init__.py  enums.py
