[tool.poetry]
name = "pig-latin-generator"
version = "0.1.0"
description = ""
authors = ["Dave262 <davidrossaudio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
customtkinter = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
